generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Account {
  id              String          @id @default(auto()) @map("_id") @db.ObjectId
  username        String
  email           String
  password        String
  AccountStatus   AccountStatus   @default(PENDING)
  accountRoleId   String?         @db.ObjectId
  AccountRole     AccountRole?    @relation(fields: [accountRoleId], references: [id])
  AccountRoleType AccountRoleType @default(GUEST)
  accountInfoId   String?         @db.ObjectId
  AccountInfo     AccountInfo?    @relation(fields: [accountInfoId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt
  Faculty           Faculty[]         @relation("createdBy")
  FacultyAdmin      FacultyAdmin[]
  SupervisedArticle Article[]         @relation("supervised")
  UploadedArticle   Article[]         @relation("uploaded")
  Event             Event[]
  Nationality       Nationality[]     @relation("createdBy")
  Notification      Notification[]    @relation("receiver")
  StudentChatRoom   ChatRoom[]        @relation("student")
  adminChatRoom     ChatRoom[]        @relation("admin")
  sendChatMessage   ChatMessage[]     @relation("sender")
  AccountLoginLog   AccountLoginLog[]
}

model AccountLoginLog {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  accountId String?  @db.ObjectId
  Account   Account? @relation(fields: [accountId], references: [id])
  ipAddress String?
  browser   String?
  geoIp     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model AccountInfo {
  id            String       @id @default(auto()) @map("_id") @db.ObjectId
  name          String?
  studentId     String?
  avatarId      String?      @db.ObjectId
  Avatar        File?        @relation(fields: [avatarId], references: [id])
  dateOfBirth   String?
  address       String?
  facultyId     String?      @db.ObjectId
  Faculty       Faculty?     @relation("belongTO", fields: [facultyId], references: [id], onDelete: SetNull, onUpdate: SetNull)
  nationalityId String?      @db.ObjectId
  Nationality   Nationality? @relation("belongTO", fields: [nationalityId], references: [id], onDelete: SetNull, onUpdate: SetNull)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Account   Account[]
}

model AccountRole {
  id          String @id @default(auto()) @map("_id") @db.ObjectId
  name        String
  description String
  permissions String
  Status      Status @default(ACTIVE)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Account   Account[]
}

model Faculty {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  name        String
  description String
  facultyCode String   @unique
  avatarId    String?  @db.ObjectId
  Avatar      File?    @relation(fields: [avatarId], references: [id])
  createdById String?  @db.ObjectId
  CreatedBy   Account? @relation("createdBy", fields: [createdById], references: [id], onDelete: SetNull, onUpdate: SetNull)
  Status      Status   @default(ACTIVE)

  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  FacultyAdmin FacultyAdmin[]
  Article      Article[]
  AccountInfo  AccountInfo[]  @relation("belongTO")
}

model FacultyAdmin {
  id          String      @id @default(auto()) @map("_id") @db.ObjectId
  accountId   String      @db.ObjectId
  Account     Account     @relation(fields: [accountId], references: [id])
  facultyId   String      @db.ObjectId
  Faculty     Faculty     @relation(fields: [facultyId], references: [id])
  FacultyRole FacultyRole @default(MEMBER)
  Status      Status      @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum AccountRoleType {
  ADMIN
  STUDENT
  GUEST
}

model Article {
  id             String        @id @default(auto()) @map("_id") @db.ObjectId
  title          String
  thumbnailId    String?       @db.ObjectId
  Thumbnail      File?         @relation("thumbnail", fields: [thumbnailId], references: [id])
  documentId     String?       @db.ObjectId
  Document       File?         @relation("doc", fields: [documentId], references: [id])
  eventId        String?       @db.ObjectId
  Event          Event?        @relation(fields: [eventId], references: [id])
  facultyId      String        @db.ObjectId
  Faculty        Faculty       @relation(fields: [facultyId], references: [id])
  content        String?
  isOverdue      Boolean       @default(false)
  ArticleStatus  ArticleStatus @default(PENDING)
  uploadedById   String?       @db.ObjectId
  UploadedBy     Account?      @relation("uploaded", fields: [uploadedById], references: [id])
  supervisedById String?       @db.ObjectId
  SupervisedBy   Account?      @relation("supervised", fields: [supervisedById], references: [id])

  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
  ArticleLog ArticleLog[]
}

model ArticleLog {
  id               String           @id @default(auto()) @map("_id") @db.ObjectId
  articleId        String           @db.ObjectId
  Article          Article          @relation(fields: [articleId], references: [id])
  message          String?
  ArticleLogStatus ArticleLogStatus @default(PENDING)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Event {
  id          String      @id @default(auto()) @map("_id") @db.ObjectId
  title       String
  description String?
  avatarId    String?     @db.ObjectId
  Avatar      File?       @relation(fields: [avatarId], references: [id])
  hostedById  String      @db.ObjectId
  HostedBy    Account     @relation(fields: [hostedById], references: [id])
  Status      EventStatus @default(ACTIVE)

  startDate   DateTime  @default(now())
  closureDate DateTime
  deadline    DateTime?
  endDate     DateTime
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  Article     Article[]
}

model File {
  id   String @id @default(auto()) @map("_id") @db.ObjectId
  name String
  path String
  type String

  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  Faculty     Faculty[]
  Document    Article[]     @relation("doc")
  Thumbnail   Article[]     @relation("thumbnail")
  AccountInfo AccountInfo[]
  Nationality Nationality[]
  Event       Event[]
}

model Nationality {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  name        String
  avatarId    String?  @db.ObjectId
  Avatar      File?    @relation(fields: [avatarId], references: [id])
  Status      Status   @default(ACTIVE)
  createdById String?  @db.ObjectId
  CreatedBy   Account? @relation("createdBy", fields: [createdById], references: [id], onDelete: SetNull, onUpdate: SetNull)

  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  AccountInfo AccountInfo[] @relation("belongTO")
}

model Notification {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  title     String
  content   String
  studentId String  @db.ObjectId
  Student   Account @relation("receiver", fields: [studentId], references: [id])
  isRead    Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model ChatRoom {
  id          String        @id @default(auto()) @map("_id") @db.ObjectId
  studentId   String        @db.ObjectId
  Student     Account       @relation("student", fields: [studentId], references: [id])
  adminId     String        @db.ObjectId
  Admin       Account       @relation("admin", fields: [adminId], references: [id])
  Status      Status        @default(ACTIVE)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  ChatMessage ChatMessage[]
}

model ChatMessage {
  id         String   @id @default(auto()) @map("_id") @db.ObjectId
  chatRoomId String   @db.ObjectId
  ChatRoom   ChatRoom @relation(fields: [chatRoomId], references: [id])
  content    String
  senderId   String   @db.ObjectId
  Sender     Account  @relation("sender", fields: [senderId], references: [id])
  isRead     Boolean  @default(false)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

enum ArticleLogStatus {
  PENDING
  ASSIGNED
  REJECTED
  NEED_ACTION
  APPROVED
}

enum ArticleStatus {
  DRAFT
  PENDING
  APPROVED
  NEED_ACTION
  REJECTED
  CANCELLED
  PERMANENTLY_DELETED
}

enum AccountStatus {
  ACTIVE
  PENDING
  INVITED
  SUSPENDED
  PERMANENTLY_DELETED
  REJECTED
}

enum EventStatus {
  PENDING
  ACTIVE
  COMPLETED
  SUSPENDED
}

enum Status {
  ACTIVE
  SUSPENDED
  PERMANENTLY_DELETED
}

enum FacultyRole {
  ADMIN
  MEMBER
}
