//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  username String [not null]
  email String [not null]
  password String [not null]
  AccountStatus AccountStatus [not null, default: 'PENDING']
  accountRoleId String
  AccountRole AccountRole
  AccountRoleType AccountRoleType [not null, default: 'GUEST']
  accountInfoId String
  AccountInfo AccountInfo
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Faculty Faculty [not null]
  FacultyAdmin FacultyAdmin [not null]
  SupervisedArticle Article [not null]
  UploadedArticle Article [not null]
  Event Event [not null]
  Nationality Nationality [not null]
  Notification Notification [not null]
  StudentChatRoom ChatRoom [not null]
  adminChatRoom ChatRoom [not null]
  sendChatMessage ChatMessage [not null]
  AccountLoginLog AccountLoginLog [not null]
}

Table AccountLoginLog {
  id String [pk]
  accountId String
  Account Account
  ipAddress String
  browser String
  geoIp String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AccountInfo {
  id String [pk]
  name String
  studentId String
  avatarId String
  Avatar File
  dateOfBirth String
  address String
  facultyId String
  Faculty Faculty
  nationalityId String
  Nationality Nationality
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Account Account [not null]
}

Table AccountRole {
  id String [pk]
  name String [not null]
  description String [not null]
  permissions String [not null]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Account Account [not null]
}

Table Faculty {
  id String [pk]
  name String [not null]
  description String [not null]
  facultyCode String [unique, not null]
  avatarId String
  Avatar File
  createdById String
  CreatedBy Account
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  FacultyAdmin FacultyAdmin [not null]
  Article Article [not null]
  AccountInfo AccountInfo [not null]
}

Table FacultyAdmin {
  id String [pk]
  accountId String [not null]
  Account Account [not null]
  facultyId String [not null]
  Faculty Faculty [not null]
  FacultyRole FacultyRole [not null, default: 'MEMBER']
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Article {
  id String [pk]
  title String [not null]
  thumbnailId String
  Thumbnail File
  documentId String
  Document File
  eventId String
  Event Event
  facultyId String [not null]
  Faculty Faculty [not null]
  content String
  isOverdue Boolean [not null, default: false]
  ArticleStatus ArticleStatus [not null, default: 'PENDING']
  uploadedById String
  UploadedBy Account
  supervisedById String
  SupervisedBy Account
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ArticleLog ArticleLog [not null]
}

Table ArticleLog {
  id String [pk]
  articleId String [not null]
  Article Article [not null]
  message String
  ArticleLogStatus ArticleLogStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Event {
  id String [pk]
  title String [not null]
  description String
  avatarId String
  Avatar File
  hostedById String [not null]
  HostedBy Account [not null]
  Status EventStatus [not null, default: 'ACTIVE']
  startDate DateTime [default: `now()`, not null]
  closureDate DateTime [not null]
  deadline DateTime
  endDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Article Article [not null]
}

Table File {
  id String [pk]
  name String [not null]
  path String [not null]
  type String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Faculty Faculty [not null]
  Document Article [not null]
  Thumbnail Article [not null]
  AccountInfo AccountInfo [not null]
  Nationality Nationality [not null]
  Event Event [not null]
}

Table Nationality {
  id String [pk]
  name String [not null]
  avatarId String
  Avatar File
  Status Status [not null, default: 'ACTIVE']
  createdById String
  CreatedBy Account
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  AccountInfo AccountInfo [not null]
}

Table Notification {
  id String [pk]
  title String [not null]
  content String [not null]
  studentId String [not null]
  Student Account [not null]
  isRead Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ChatRoom {
  id String [pk]
  studentId String [not null]
  Student Account [not null]
  adminId String [not null]
  Admin Account [not null]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ChatMessage ChatMessage [not null]
}

Table ChatMessage {
  id String [pk]
  chatRoomId String [not null]
  ChatRoom ChatRoom [not null]
  content String [not null]
  senderId String [not null]
  Sender Account [not null]
  isRead Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table createdBy {
  facultyId String [ref: > Faculty.id]
  nationalityId String [ref: > Nationality.id]
}

Table belongTO {
  accountinfoId String [ref: > AccountInfo.id]
  accountinfoId String [ref: > AccountInfo.id]
}

Enum AccountRoleType {
  ADMIN
  STUDENT
  GUEST
}

Enum ArticleLogStatus {
  PENDING
  ASSIGNED
  REJECTED
  NEED_ACTION
  APPROVED
}

Enum ArticleStatus {
  DRAFT
  PENDING
  APPROVED
  NEED_ACTION
  REJECTED
  CANCELLED
  PERMANENTLY_DELETED
}

Enum AccountStatus {
  ACTIVE
  PENDING
  INVITED
  SUSPENDED
  PERMANENTLY_DELETED
  REJECTED
}

Enum EventStatus {
  PENDING
  ACTIVE
  COMPLETED
  SUSPENDED
}

Enum Status {
  ACTIVE
  SUSPENDED
  PERMANENTLY_DELETED
}

Enum FacultyRole {
  ADMIN
  MEMBER
}

Ref: Account.accountRoleId > AccountRole.id

Ref: Account.accountInfoId > AccountInfo.id [delete: No Action]

Ref: AccountLoginLog.accountId > Account.id

Ref: AccountInfo.avatarId > File.id

Ref: AccountInfo.facultyId > Faculty.id [delete: Set Null]

Ref: AccountInfo.nationalityId > Nationality.id [delete: Set Null]

Ref: Faculty.avatarId > File.id

Ref: Faculty.createdById > Account.id [delete: Set Null]

Ref: FacultyAdmin.accountId > Account.id

Ref: FacultyAdmin.facultyId > Faculty.id

Ref: Article.thumbnailId > File.id

Ref: Article.documentId > File.id

Ref: Article.eventId > Event.id

Ref: Article.facultyId > Faculty.id

Ref: Article.uploadedById > Account.id

Ref: Article.supervisedById > Account.id

Ref: ArticleLog.articleId > Article.id

Ref: Event.avatarId > File.id

Ref: Event.hostedById > Account.id

Ref: Nationality.avatarId > File.id

Ref: Nationality.createdById > Account.id [delete: Set Null]

Ref: Notification.studentId > Account.id

Ref: ChatRoom.studentId > Account.id

Ref: ChatRoom.adminId > Account.id

Ref: ChatMessage.chatRoomId > ChatRoom.id

Ref: ChatMessage.senderId > Account.id